tests/files/lexer_tests/should_fail/052.cmdr
// Illegal character in variable name (ascii 19)
myvar = 19;